{
    "name": "UIInputs",
    "maps": [
        {
            "name": "UIActions",
            "id": "8827be03-d357-4046-ad2e-4bf1019812ac",
            "actions": [
                {
                    "name": "BuildMenu",
                    "type": "Button",
                    "id": "9feeec87-8c7f-49ca-942f-236588b4cecc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BuildingMenue",
                    "type": "Button",
                    "id": "84f1ffef-dcf9-429b-97c1-7f554ff95b27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CloseMenu",
                    "type": "Button",
                    "id": "b251547a-74d1-4174-8f47-1f45b5f1e54b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "73ba6535-3e60-4a09-9e92-4f4d23118459",
                    "path": "<Keyboard>/b",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "BuildMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e75b3efd-d5cf-4804-900e-2159c28b3b03",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "BuildingMenue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc31abbf-588e-4419-9913-c570bfbefac9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard",
                    "action": "CloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard",
            "bindingGroup": "KeyBoard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}